--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
     <body>
         This is a website.  It is a bad website, but it is a website, nevertheless.
+
+        I don't even know what the deal is with git.  I'm just trying to figure out how to get vs code to talk to it.
+
+        What the fuck is wrong with this stupid thing, anyway?
     </body>
 </html>
