testing push to test-site-1, pull to master

--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
     <body>
         This is a website.  It is a bad website, but it is a website, nevertheless.
 
-        I don't even know what the deal is with git.  I'm just trying to figure out how to get vs code to talk to it.
-
-        What the fuck is wrong with this stupid thing, anyway?
-
-        testing...testing...
+        We're now moving from committing to my test branch to pulling back to master.  Let's see how that one goes.
     </body>
 </html>
