Added a title to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <title>
+        FroMonk.GitHub.io.  Your one stop shop for all your FroMonk needs.
+    </title>
     <body>
         This is a website.  It is a bad website, but it is a website, nevertheless.
 
